--- a/app.json
+++ b/app.json
@@ -4,7 +4,7 @@
     "slug": "TerraSphere",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/images/icon.png",
+    "icon": "./assets/images/logo.png",
     "scheme": "terrasphere",
     "userInterfaceStyle": "automatic",
     "splash": {
